<resources>
    <string name="app_name">WhatsForDinner</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_new_dish_activity">new_dish_activity</string>
    <string name="title_activity_recipes_">Recipes_Activity</string>
    <string name="title_activity_groceries_activity">groceries_activity</string>
    <string name="title_activity_meals_activity">meals_activity</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="landscape_text">Landscape Mode</string>
    <string name="portrait_text">Portrait Mode</string>
    <string name="title_activity_ingredients">Ingredients</string>
    <string name="title_activity_cooking__directions">Cooking_Directions</string>
    <string name="recipe_icon">Recipe</string>
    <string name="groceries_icon">Groceries</string>
    <string name="newmeals_icon">New Meals</string>
    <string name="meals_icon">Meals</string>
    <string name="banner_icon">Banner</string>
    <string name="authorname">Author Name: abc</string>
    <string name="softwareversion">Software Version Number: 1.1</string>
    <string name="url">Help Url: help@whatsfordinner.com</string>
    <string name="submit">Submit</string>
    <string name="photo">Choose Photo</string>
    <string name="copyright">"Copyright_Information: Copyright (c) 2016 What's for Dinner
All Rights Reserved

This product is protected by copyright and distributed under
licenses restricting copying, distribution and decompilation."</string>
    <string name="recipes">RECIPES</string>
    <string name="title_activity_nutrition__manager">Nutrition_Manager</string>
    <string name="title_activity_weekly__nutrition__manager">Weekly_Nutrition_Manager</string>
    <string name="title_activity_string_adapter">StringAdapter</string>
</resources>
