<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.wearable.whatsfordinner.MainActivity"
    tools:showIn="@layout/activity_main"
    android:weightSum="1">


    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/top_banner"
        android:onClick="printMsg"
        android:contentDescription="@string/banner_icon"/>


  <GridLayout
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:rowCount="4"
      android:columnCount="3">


      <ImageView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_row="0"
          android:paddingLeft="70dp"
          android:paddingTop="40dp"
          android:paddingRight="70dp"
          android:src="@drawable/new_meals"
          android:layout_column="0"
          android:onClick="viewMeals"
          android:contentDescription="@string/meals_icon"
          android:id="@+id/viewmeals" />


      <ImageView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:src="@drawable/new_recipes"
          android:paddingTop="40dp"
          android:paddingStart="50dp"
          android:paddingLeft="50dp"
          android:paddingEnd="70dp"
          android:paddingRight="70dp"
          android:layout_row="0"
          android:layout_column="1"
          android:onClick="viewRecipes"
          android:contentDescription="@string/recipe_icon"
          android:id="@+id/viewrecipes" />

      <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:textAppearance="?android:attr/textAppearanceMedium"
          android:text="Meals"
          android:id="@+id/textView"
          android:layout_row="1"
          android:layout_column="0"
          android:paddingLeft="70dp"
          android:paddingTop="10dp"/>

      <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:textAppearance="?android:attr/textAppearanceMedium"
          android:text="Recipes"
          android:id="@+id/textView32"
          android:layout_row="1"
          android:layout_column="1"
          android:paddingLeft="50dp"
          android:paddingTop="10dp"/>

      <ImageView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:src="@drawable/new_groceries"
          android:paddingLeft="70dp"
          android:paddingTop="40dp"
          android:paddingRight="70dp"
          android:layout_row="2"
          android:layout_column="0"
          android:onClick="viewGroceries"
          android:contentDescription="@string/groceries_icon"
          android:id="@+id/viewgroceries" />

      <ImageView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:src="@drawable/add_new"
          android:paddingTop="50dp"
          android:paddingStart="50dp"
          android:paddingLeft="50dp"
          android:paddingEnd="70dp"
          android:paddingRight="70dp"
          android:layout_row="2"
          android:layout_column="1"
          android:contentDescription="@string/newmeals_icon"
          android:id="@+id/viewnewmeals"
          android:onClick="addNewMeals"/>

      <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:textAppearance="?android:attr/textAppearanceMedium"
          android:text="Groceries"
          android:id="@+id/textView33"
          android:layout_row="3"
          android:layout_column="0"
          android:paddingLeft="65dp"/>

      <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:textAppearance="?android:attr/textAppearanceMedium"
          android:text="New Dish"
          android:id="@+id/textView34"
          android:layout_row="3"
          android:layout_column="1"
          android:paddingLeft="50dp"/>/>
  </GridLayout>

</LinearLayout>
